# Person_Of_Interest_Project

./: .example.env  .gitignore  README.md  fix_siglip_data.py  pyproject.toml  render.yaml
backend/: main.py  mainold.py  migrate_to_qdrant.py  pyproject.toml  requirements.txt  test_hf.py  test_hf_client.py  test_hf_client_t2i.py  test_hf_default.py  test_hf_router.py  test_hf_t2i.py  test_local_sdxl.py  test_url_format.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
src/: ad_poi.py
