[project]
name = "backend"
version = "0.1.0"
description = "Zero-RAM Cloud POI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "requests>=2.32.3",
    "better-profanity>=0.7.0",
    "uvicorn>=0.40.0",
]
